# DMNet-Denoising

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  denoising_logic.md.resolved
create_gt/: CMakeLists.txt  add_normals.py  data_process.py  denoise_data_process.py  meshing.cc  meshing_denoise.cc  run.py
create_mesh/: CMakeLists.txt  create_delaunay_mesh.h  delaunay_mesh.cpp  run.py  tinyply.h
example/exp/model/model/: loss.txt  model.pt
example/exp/model/model_epoch_0/: loss.txt  model.pt
example/exp/model/model_epoch_1/: loss.txt  model.pt
example/exp/model/model_epoch_2/: model.pt
example/exp/model/model_epoch_3/: loss.txt  model.pt
example/exp/model/model_epoch_4/: loss.txt  model.pt
example/exp/model/model_epoch_5/: loss.txt  model.pt
example/exp/model/model_epoch_6/: loss.txt  model.pt
example/exp/model/model_epoch_7/: loss.txt  model.pt
example/exp/model/model_epoch_8/: loss.txt  model.pt
example/exp/output_label/cd453676206a94394033826da8c9e89d/: pre_label.txt
example/exp/output_label/d1a8e79eebf4a0b1579c3d4943e463ef/: pre_label.txt
example/exp/output_label/d1df81e184c71e0f26360e1e29a956c7/: pre_label.txt
example/processed_data/cd453676206a94394033826da8c9e89d/: cell_label.txt  output_cell_vertex_idx.txt  output_facet_nei_cell.txt  output_facet_vertex_idx.txt  output_tetrahedron_adj  ref_point_label.txt  sampled_points.ply  tet_adj_facet.txt  transform.txt
example/processed_data/d1a8e79eebf4a0b1579c3d4943e463ef/: cell_label.txt  noise_points.ply  output_cell_vertex_idx.txt  output_facet_nei_cell.txt  output_facet_vertex_idx.txt  output_tetrahedron_adj  ref_point_label.txt  sampled_points.ply  tet_adj_facet.txt  transform.txt
example/processed_data/d1df81e184c71e0f26360e1e29a956c7/: cell_label.txt  output_cell_vertex_idx.txt  output_facet_nei_cell.txt  output_facet_vertex_idx.txt  output_tetrahedron_adj  ref_point_label.txt  sampled_points.ply  tet_adj_facet.txt  transform.txt
network/: DTU.py  DT_data.py  DT_dataloader.py  R_GCN_model.py  cache_dataset.py  losses.py  losses_backup.py  test_cfg.yaml  test_name.txt  test_pro.py  train_cfg.yaml  train_name.txt  train_pro.py  train_utils.py  training guide  val_name.txt
