cmake_minimum_required(VERSION 3.2)

project(igl_gt)
set(CMAKE_CXX_STANDARD 11)
if(WIN32)
    find_package(Open3D HINTS ${CMAKE_INSTALL_PREFIX}/CMake)
else()
    # Attempt to find Open3D from python if not set
    if (NOT Open3D_DIR)
        set(POSSIBLE_OPEN3D_DIRS
            "/usr/local/lib/python3.8/dist-packages/open3d/share/cmake/Open3D"
            "/usr/local/lib/python3.9/dist-packages/open3d/share/cmake/Open3D"
            "/usr/lib/python3.8/site-packages/open3d/share/cmake/Open3D"
            "/usr/local/lib/python3.8/site-packages/open3d/share/cmake/Open3D"
            # Add other potential paths here if needed
        )
        
        message(STATUS "Searching for Open3DConfig.cmake in common locations...")
        foreach(DIR ${POSSIBLE_OPEN3D_DIRS})
            if(EXISTS "${DIR}/Open3DConfig.cmake")
                message(STATUS "Found Open3D Config manually at ${DIR}")
                set(Open3D_DIR ${DIR})
                break()
            endif()
        endforeach()
        
        if (NOT Open3D_DIR)
             message(WARNING "Could not find Open3D manually. Please ensure Open3D is installed and CMAKE_PREFIX_PATH includes the directory containing Open3DConfig.cmake")
        endif()
    endif()

    find_package(Open3D HINTS ${CMAKE_INSTALL_PREFIX}/lib/cmake)
    list(APPEND Open3D_LIBRARIES dl)
endif()

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${Open3D_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Open3D_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${Open3D_EXE_LINKER_FLAGS}")

# Set OS-specific things here
if(WIN32)
elseif(CYGWIN)
elseif(APPLE)
elseif(UNIX)
        add_definitions(-DUNIX)
        add_compile_options(-Wno-deprecated-declarations)
        add_compile_options(-Wno-unused-result)
    add_definitions(-O3)
endif(WIN32)

# Open3D
if (Open3D_FOUND)
    message(STATUS "Found Open3D ${Open3D_VERSION}")

    # link_directories must be before add_executable
    link_directories(${Open3D_LIBRARY_DIRS})

    add_executable(igl_gt meshing.cc)

    target_link_libraries(igl_gt ${Open3D_LIBRARIES})

    target_include_directories(igl_gt PUBLIC ${Open3D_INCLUDE_DIRS})

    # Hot fix windows dll not found issue, assumming we're using the Release build
    option(BUILD_SHARED_LIBS "Whether Open3D was build as shared library" OFF)
    if(WIN32 AND BUILD_SHARED_LIBS)
        message("Will copy Open3D.dll to ${CMAKE_CURRENT_BINARY_DIR}/Release")
        add_custom_command(TARGET igl_gt POST_BUILD
                        COMMAND ${CMAKE_COMMAND} -E copy
                                ${CMAKE_INSTALL_PREFIX}/bin/Open3D.dll
                                ${CMAKE_CURRENT_BINARY_DIR}/Release)
    endif()

else ()
    message(SEND_ERROR "Open3D not found")
endif ()

target_link_libraries(igl_gt boost_thread gmp)

# Denoising Tool (No Mesh Dependency)
add_executable(igl_gt_denoise meshing_denoise.cc)
target_link_libraries(igl_gt_denoise ${Open3D_LIBRARIES} boost_thread gmp)
target_include_directories(igl_gt_denoise PUBLIC ${Open3D_INCLUDE_DIRS})
if(WIN32 AND BUILD_SHARED_LIBS)
    add_custom_command(TARGET igl_gt_denoise POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy
                            ${CMAKE_INSTALL_PREFIX}/bin/Open3D.dll
                            ${CMAKE_CURRENT_BINARY_DIR}/Release)
endif()
